...
    <NavigationContainer>
      <Stack.Navigator>
        <Stack.Screen name="Chat" component={ChatRoute} options={{ headerShown: false }} />
        <Stack.Group
          screenOptions={({ navigation }) => ({
            presentation: 'modal',
            headerRight: () => <Button title="Done" onPress={() => navigation.goBack()} />,
          })}
        >
          <Stack.Screen name="Paywall" component={PaywallRoute} options={{ title: 'All Access' }} />
          <Stack.Screen
            name="DevControls"
            component={DevControlsRoute}
...
